Fix search button spacing

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -91,7 +91,7 @@
     overflow-x: auto;
     white-space: nowrap;
     column-gap: var(--gap);
-    margin-top: 22px;
+    margin-top: 16px;
 }
 
 .menu a {
